Wed Jul 30 16:36:52 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c:
	- merged patch #2031829 about NTLMv2, still some FIXME/TODO

Wed Jul 30 10:05:02 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/Makefile.am: add missing header for hmac

Wed Jul 30 10:01:14 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/hmac_md5.h(added) src/tds/hmac_md5.c(added):
	* src/tds/Makefile.am:
	- added needed hmac code for NTLMv2

Tue Jul 29 09:54:23 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/ctlib/ct.c:
	- patch from ML on 29 July 2008 from Andrew Victor 
	- re BLOBs as parameters

Mon Jul 28 16:56:36 EDT 2008	JK Lowden <jklowden@freetds.org>
	* samples/odbc_rpc.pl src/odbc/error.c src/odbc/odbc.c:
	- tracking down SQLParamData behavior 

Thu Jul 24 18:02:52 EDT 2008	JK Lowden <jklowden@freetds.org>
	* samples/odbc_rpc.pl:
	* src/odbc/odbc.c src/odbc/prepare_query.c src/tds/net.c:
	- test parameter binding with SQL_LONGVARCHAR

Wed Jul 23 16:05:41 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/odbc/error.c src/odbc/odbc.c:
	- record error in log and remove some redundant logging of
	- entry into static functions

Thu Jul 17 13:51:07 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* INSTALL INSTALL.CVS Makefile.am TODO vms/config_h.vms:
	* win32/config.h:
	- updated due to file rename

Thu Jul 17 07:37:28 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO: updated

Wed Jul 16 09:36:42 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor6.c src/odbc/unittests/cursor7.c:
	- fixed for Sybase

Tue Jul 15 17:20:38 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: some code for mssql2005

Tue Jul 15 17:13:42 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/genparams.c: improved for WCHARs

Tue Jul 15 11:52:45 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/datafmt.c src/odbc/sql2tds.c: